--- a/static/lang/en.json
+++ b/static/lang/en.json
@@ -21,7 +21,7 @@
         "hint": "Change how effect level is calculated for spells.",
         "SlotLevel": "2 x Spell Slot Rank",
         "CasterLevel": "Caster Level",
-        "BetterOf": "Better of Caster Level or 2 x Spell Slot Rank"
+        "BetterOfSlotLevelOrCasterLevel": "Better of Caster Level or 2 x Spell Slot Rank"
       },
       "IncapacitationEffect": {
         "name": "Incapacitation effect",
